deployment/django-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: django
status: {}
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: django
        environment: production
        force: force
    spec:
      restartPolicy: Always
      volumes:
        - name: kubeconfig-volume
          configMap:
            name: kubeconfig-configmap
      containers:
        - image: ldssa/django:latest
          name: django
          resources: {}
          args:
            - /start
          volumeMounts:
            - name: kubeconfig-volume
              mountPath: /home/django/.kube/
