deployment/postgres-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
status: {}
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-persistentvolumeclaim
        - name: postgres-backups
          persistentVolumeClaim:
            claimName: postgres-backups-persistentvolumeclaim
      containers:
        - image: ldssa/postgres
          name: postgres
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /backups
              name: postgres-backups
