deployment/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
status: {}
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: Always
      containers:
        - image: redis:3.2
          name: redis
          resources: {}
