deployment/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: django
